kubernetes-bin/templates/ExtraAddons/prometheus/grafana/grafana.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
  namespace: monitoring
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: grafana
